// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots ClaimPaper with ClaimBody 1`] = `
<div
  className="MuiPaper-root MuiPaper-elevation1 Component-root-153 Component-root-154 Component-root-152 MuiPaper-rounded"
>
  <h5
    className="MuiTypography-root WithStyles(ForwardRef(Typography))-root-182 WithStyles(ForwardRef(Typography))-root-183 MuiTypography-h5 MuiTypography-colorTextPrimary MuiTypography-alignCenter"
  >
    This is a claim body
  </h5>
</div>
`;

exports[`Storyshots Claims Evidence 1`] = `
<div
  className="MuiPaper-root-336 MuiPaper-elevation0-338 MuiPaper-rounded-337 MuiExpansionPanel-root-332 MuiExpansionPanel-rounded-333 Component-root-331"
>
  <div
    aria-disabled={false}
    aria-expanded={false}
    className="MuiButtonBase-root-371 MuiExpansionPanelSummary-root-365 Component-root-363"
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    role="button"
    tabIndex="0"
  >
    <div
      className="MuiExpansionPanelSummary-content-369 Component-content-364"
    >
      <div
        className="MuiBox-root-374 MuiBox-root-375"
      >
        <div
          className="MuiBox-root-374 MuiBox-root-376"
          onClick={[Function]}
        >
          <button
            aria-haspopup="true"
            className="MuiButtonBase-root-371 MuiButton-root-381 MuiButton-text-383 WithStyles(ForwardRef(Button))-root-379 WithStyles(ForwardRef(Button))-root-380 Component-root-377 Component-root-378"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex="0"
            type="button"
          >
            <span
              className="MuiButton-label-382"
            >
              66
              %
            </span>
          </button>
        </div>
      </div>
      <div
        className="MuiBox-root-374 MuiBox-root-401"
      >
        <h6
          className="MuiTypography-root-404 MuiTypography-h6-414 WithStyles(ForwardRef(Typography))-root-402 WithStyles(ForwardRef(Typography))-root-403"
        >
          <a
            className="MuiTypography-root-404 MuiTypography-colorInherit-426 MuiLink-root-436 MuiLink-underlineHover-438 Component-root-434 Component-root-435"
            href="/somesay/this-is-another-claim"
            onClick={[Function]}
          >
            This is a claim that stretches the limits of this system. It has precisely 255 characters, the maximum number of characters that a claim can have and still be valid. Anything longer than this will be rejected by the system because it is too long. Goodbye.
          </a>
        </h6>
        <div
          className="MuiBox-root-374 MuiBox-root-441"
          onClick={[Function]}
        >
          <button
            className="MuiButtonBase-root-371 MuiButton-root-381 MuiButton-text-383 WithStyles(ForwardRef(Button))-root-379 WithStyles(ForwardRef(Button))-root-442"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex="0"
            type="button"
          >
            <span
              className="MuiButton-label-382"
            >
              I agree
            </span>
          </button>
          <button
            className="MuiButtonBase-root-371 MuiButton-root-381 MuiButton-text-383 WithStyles(ForwardRef(Button))-root-379 WithStyles(ForwardRef(Button))-root-443"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex="0"
            type="button"
          >
            <span
              className="MuiButton-label-382"
            >
              I'm not sure
            </span>
          </button>
          <button
            className="MuiButtonBase-root-371 MuiButton-root-381 MuiButton-text-383 WithStyles(ForwardRef(Button))-root-379 WithStyles(ForwardRef(Button))-root-444"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex="0"
            type="button"
          >
            <span
              className="MuiButton-label-382"
            >
              I disagree
            </span>
          </button>
        </div>
      </div>
    </div>
    <div
      aria-disabled={false}
      aria-hidden="true"
      className="MuiButtonBase-root-371 MuiIconButton-root-445 MuiIconButton-edgeEnd-447 MuiExpansionPanelSummary-expandIcon-370"
      onBlur={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      role="button"
      tabIndex={-1}
    >
      <span
        className="MuiIconButton-label-453"
      >
        <svg
          aria-hidden="true"
          className="MuiSvgIcon-root-454"
          focusable="false"
          role="presentation"
          viewBox="0 0 24 24"
        >
          <path
            d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
          />
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />
        </svg>
      </span>
    </div>
  </div>
  <div
    className="MuiCollapse-container-463 MuiCollapse-hidden-465"
    style={
      Object {
        "minHeight": "0px",
      }
    }
  >
    <div
      className="MuiCollapse-wrapper-466"
    >
      <div
        className="MuiCollapse-wrapperInner-467"
      >
        <div
          role="region"
        >
          <div
            className="MuiExpansionPanelDetails-root-468"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Claims SupportList 1`] = `""`;

exports[`Storyshots Claims default 1`] = `
<div
  className="MuiGrid-root WithStyles(ForwardRef(Grid))-root-214 WithStyles(ForwardRef(Grid))-root-215 MuiGrid-container MuiGrid-spacing-xs-1"
/>
`;

exports[`Storyshots Header default 1`] = `
<header>
  <header
    className="MuiPaper-root-43 MuiPaper-elevation4-49 MuiAppBar-root-34 MuiAppBar-positionStatic-38 MuiAppBar-colorDefault-40"
  >
    <div
      className="MuiToolbar-root-72 MuiToolbar-regular-74 MuiToolbar-gutters-73 WithStyles(ForwardRef(Toolbar))-root-70 WithStyles(ForwardRef(Toolbar))-root-71"
    >
      <button
        aria-haspopup="true"
        className="MuiButtonBase-root-95 MuiButton-root-78 MuiButton-text-80 WithStyles(ForwardRef(Button))-root-76 WithStyles(ForwardRef(Button))-root-77"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex="0"
        type="button"
      >
        <span
          className="MuiButton-label-79"
        >
          <img
            alt="logo"
            className="Component-logo-98"
            src="logo.svg"
          />
        </span>
      </button>
      <h6
        className="MuiTypography-root-105 MuiTypography-h6-115 WithStyles(ForwardRef(Typography))-root-103 WithStyles(ForwardRef(Typography))-root-104 Component-ohhey-33"
      >
        <a
          className="MuiTypography-root-105 MuiTypography-colorInherit-127 MuiLink-root-137 MuiLink-underlineHover-139 Component-root-135 Component-root-136"
          href="/"
          onClick={[Function]}
        >
          oh hey!
        </a>
      </h6>
      <button
        aria-haspopup="true"
        className="MuiButtonBase-root-95 MuiButton-root-78 MuiButton-text-80 WithStyles(ForwardRef(Button))-root-76 WithStyles(ForwardRef(Button))-root-142"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex="0"
        type="button"
      >
        <span
          className="MuiButton-label-79"
        >
          <svg
            aria-hidden="true"
            className="MuiSvgIcon-root-143 MuiSvgIcon-colorPrimary-144"
            focusable="false"
            role="presentation"
            viewBox="0 0 24 24"
          >
            <path
              d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 3c1.66 0 3 1.34 3 3s-1.34 3-3 3-3-1.34-3-3 1.34-3 3-3zm0 14.2c-2.5 0-4.71-1.28-6-3.22.03-1.99 4-3.08 6-3.08 1.99 0 5.97 1.09 6 3.08-1.29 1.94-3.5 3.22-6 3.22z"
            />
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
          </svg>
        </span>
      </button>
    </div>
  </header>
</header>
`;

exports[`Storyshots Sources default 1`] = `
<div
  className="MuiBox-root MuiBox-root-591"
>
  <sup
    className="Component-sup-587"
    onMouseEnter={[Function]}
  >
    [
    <span
      className="Component-note-588"
    >
      *
    </span>
    ]
  </sup>
</div>
`;

exports[`Storyshots UI components ClaimPaper 1`] = `
<div
  className="MuiPaper-root MuiPaper-elevation1 Component-root-4 Component-root-5 Component-root-3 MuiPaper-rounded"
>
  This is some paper on which to write a claim.
</div>
`;

exports[`Storyshots UI components Spinner 1`] = `
<div
  className="sk-fade-in sk-spinner Spinner-root-1 Spinner-root-2 sk-chasing-dots"
>
  <div />
  <div />
</div>
`;

exports[`Storyshots UserClaim default 1`] = `
<div
  className="MuiPaper-root-482 MuiPaper-elevation1-485 MuiPaper-rounded-483 Component-root-480 Component-root-481 Component-root-479"
>
  <div
    className="MuiToolbar-root-511 MuiToolbar-regular-513 MuiToolbar-gutters-512 WithStyles(ForwardRef(Toolbar))-root-509 WithStyles(ForwardRef(Toolbar))-root-510"
  >
    <div
      className="MuiBox-root-515 MuiBox-root-516"
    />
    <div
      className="MuiBox-root-515 MuiBox-root-517"
    >
      <a
        className="MuiTypography-root-525 MuiTypography-colorInherit-547 MuiLink-root-520 MuiLink-underlineHover-522 Component-root-518 Component-root-519"
        href="/somesay/this-is-a-claim"
        onClick={[Function]}
      >
        <svg
          aria-hidden="true"
          className="MuiSvgIcon-root-555 MuiSvgIcon-fontSizeInherit-561"
          focusable="false"
          role="presentation"
          viewBox="0 0 24 24"
        >
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />
          <path
            d="M16 11c1.66 0 2.99-1.34 2.99-3S17.66 5 16 5c-1.66 0-3 1.34-3 3s1.34 3 3 3zm-8 0c1.66 0 2.99-1.34 2.99-3S9.66 5 8 5C6.34 5 5 6.34 5 8s1.34 3 3 3zm0 2c-2.33 0-7 1.17-7 3.5V19h14v-2.5c0-2.33-4.67-3.5-7-3.5zm8 0c-.29 0-.62.02-.97.05 1.16.84 1.97 1.97 1.97 3.45V19h6v-2.5c0-2.33-4.67-3.5-7-3.5z"
          />
        </svg>
      </a>
      <button
        className="MuiButtonBase-root-584 MuiButton-root-567 MuiButton-text-569 WithStyles(ForwardRef(Button))-root-565 WithStyles(ForwardRef(Button))-root-566 Styled(WithStyles(ForwardRef(Button)))-root-564"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex="0"
        type="button"
      >
        <span
          className="MuiButton-label-568"
        >
          <svg
            aria-hidden="true"
            className="MuiSvgIcon-root-555 MuiSvgIcon-fontSizeInherit-561"
            focusable="false"
            role="presentation"
            viewBox="0 0 24 24"
          >
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
            <path
              d="M18 16.08c-.76 0-1.44.3-1.96.77L8.91 12.7c.05-.23.09-.46.09-.7s-.04-.47-.09-.7l7.05-4.11c.54.5 1.25.81 2.04.81 1.66 0 3-1.34 3-3s-1.34-3-3-3-3 1.34-3 3c0 .24.04.47.09.7L8.04 9.81C7.5 9.31 6.79 9 6 9c-1.66 0-3 1.34-3 3s1.34 3 3 3c.79 0 1.5-.31 2.04-.81l7.12 4.16c-.05.21-.08.43-.08.65 0 1.61 1.31 2.92 2.92 2.92 1.61 0 2.92-1.31 2.92-2.92s-1.31-2.92-2.92-2.92z"
            />
          </svg>
        </span>
      </button>
    </div>
  </div>
  <h6
    className="MuiTypography-root-525 MuiTypography-subtitle1-536 MuiTypography-colorTextPrimary-550 MuiTypography-alignCenter-541 WithStyles(ForwardRef(Typography))-root-601 WithStyles(ForwardRef(Typography))-root-602"
  >
    @
    toby
     believes 
  </h6>
  <h5
    className="MuiTypography-root-525 MuiTypography-h5-534 MuiTypography-colorTextPrimary-550 MuiTypography-alignCenter-541 WithStyles(ForwardRef(Typography))-root-601 WithStyles(ForwardRef(Typography))-root-603"
  >
    <a
      className="MuiTypography-root-525 MuiTypography-colorInherit-547 MuiLink-root-520 MuiLink-underlineHover-522 Component-root-518 Component-root-604"
      href="/somesay/this-is-a-claim"
      onClick={[Function]}
    >
      This is a claim
    </a>
  </h5>
  <p
    className="MuiTypography-root-525 MuiTypography-body1-527 MuiTypography-alignCenter-541 WithStyles(ForwardRef(Typography))-root-601 WithStyles(ForwardRef(Typography))-root-605"
  >
    <button
      className="MuiButtonBase-root-584 MuiButton-root-567 MuiButton-text-569 WithStyles(ForwardRef(Button))-root-565 WithStyles(ForwardRef(Button))-root-606"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex="0"
      type="button"
    >
      <span
        className="MuiButton-label-568"
      >
        I agree
      </span>
    </button>
    <button
      className="MuiButtonBase-root-584 MuiButton-root-567 MuiButton-text-569 WithStyles(ForwardRef(Button))-root-565 WithStyles(ForwardRef(Button))-root-607"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex="0"
      type="button"
    >
      <span
        className="MuiButton-label-568"
      >
        I'm not sure
      </span>
    </button>
    <button
      className="MuiButtonBase-root-584 MuiButton-root-567 MuiButton-text-569 WithStyles(ForwardRef(Button))-root-565 WithStyles(ForwardRef(Button))-root-608"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex="0"
      type="button"
    >
      <span
        className="MuiButton-label-568"
      >
        I disagree
      </span>
    </button>
  </p>
  <div>
    
    
    
    
  </div>
</div>
`;
